--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Brefofrancis/Fliqlo_Web-version/issues"
   },
-  "homepage": "https://github.com/Brefofrancis/Fliqlo_Web-version#readme"
+  "homepage": "https://github.com/Brefofrancis/Fliqlo_Web-version#readme",
+  "devDependencies": {
+    "eslint": "^8.41.0"
+  }
 }
